--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       <div class="logo text-2xl font-bold text-primary mr-3">
         <i class="fas fa-cloud-download-alt"></i>
       </div>
-      <h1 class="title text-xl font-semibold">VidStream</h1>
+      <h1 class="title text-xl font-semibold">MINHTHUAN</h1>
     </div>
 
     <div
